correct tweet area overflow

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -42,6 +42,7 @@ body {
 
 .container textarea {
   width: 100%;
+  height: 6em;
   margin-bottom: 1em;
   background-color: transparent;
   outline: none;
